--- a/init.libra.rc
+++ b/init.libra.rc
@@ -467,7 +467,16 @@ service time_daemon /system/bin/time_daemon
     group root
     writepid /dev/cpuset/system-background/tasks
 
-service ril-daemon1 /system/bin/rild -c 2
+service ril-daemon /system/bin/rild
+    class main
+    socket rild stream 660 root radio
+    socket sap_uim_socket1 stream 660 bluetooth bluetooth
+    socket rild-debug stream 660 radio system
+    user root
+    group radio cache inet misc audio log qcom_diag
+    writepid /dev/cpuset/system-background/tasks
+
+service ril-daemon2 /system/bin/rild -c 2
     class main
     socket rild2 stream 660 root radio
     socket rild-debug2 stream 660 radio system
