--- a/init.libra.rc
+++ b/init.libra.rc
@@ -447,8 +447,10 @@ service ril-daemon /system/bin/rild
     socket rild stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
+    socket cutback stream 660 media radio
+    socket wpa_wlan0 dgram 660 wifi wifi
     user root
-    group radio cache inet misc audio log qcom_diag
+    group radio cache inet misc audio log diag qcom_diag net_raw wifi compass wakelock
     writepid /dev/cpuset/system-background/tasks
 
 service ril-daemon2 /system/bin/rild -c 2
