--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:targetSdkVersion="24"/>
 
     <application
-        android:label="OneplusDoze"
+        android:label="LibraDoze"
         android:persistent="true">
 
         <receiver android:name="com.cyanogenmod.settings.doze.DozeReceiver">
@@ -26,7 +26,7 @@
         </receiver>
 
         <service android:name="com.cyanogenmod.settings.doze.DozeService"
-                 android:permission="OneplusDozeService">
+                 android:permission="LibraDozeService">
         </service>
 
         <activity
