--- a/init.libra.rc
+++ b/init.libra.rc
@@ -372,6 +372,7 @@ service ipacm /system/bin/ipacm
     class main
     user net_admin
     group net_admin inet
+    writepid /dev/cpuset/system-background/tasks
 
 service per_mgr /system/bin/pm-service
     class core
