--- a/init.libra.rc
+++ b/init.libra.rc
@@ -309,7 +309,7 @@ service rmt_storage /system/bin/rmt_storage
 service rfs_access /system/bin/rfs_access
     class core
     user root
-    group system net_raw
+    group system net_raw wakelock
     writepid /dev/cpuset/system-background/tasks
 
 service start_hci_filter /system/bin/wcnss_filter
