--- a/init.libra.rc
+++ b/init.libra.rc
@@ -377,7 +377,7 @@ service ipacm /system/bin/ipacm
 service per_mgr /system/bin/pm-service
     class core
     user system
-    group system net_raw
+    group system
     writepid /dev/cpuset/system-background/tasks
 
 service per_proxy /system/bin/pm-proxy
