More GPS updates from MiUI 7.1.4
Change-Id: Ie1629417dfcf6b22aa8cab2cc267cc058c65cb94

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -278,6 +278,8 @@ on post-fs-data
     mkdir /data/misc/location/mq 0770 gps gps
     mkdir /data/misc/location/xtwifi 0770 gps gps
     mkdir /data/misc/location/gpsone_d 0770 system gps
+    mkdir /data/misc/location/quipc 0770 gps system
+    mkdir /data/misc/location/gsiff 0770 gps gps
 
     # Audio
     mkdir /data/misc/audio 0770 audio audio
