--- a/audio/audio_effects.conf
+++ b/audio/audio_effects.conf
@@ -1,3 +1,30 @@
+# Copyright (c) 2014-2016, The Linux Foundation. All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are
+# met:
+#    * Redistributions of source code must retain the above copyright
+#      notice, this list of conditions and the following disclaimer.
+#    * Redistributions in binary form must reproduce the above
+#      copyright notice, this list of conditions and the following
+#      disclaimer in the documentation and/or other materials provided
+#      with the distribution.
+#    * Neither the name of The Linux Foundation nor the names of its
+#      contributors may be used to endorse or promote products derived
+#      from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
+# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
+# ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
+# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
+# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
+# OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
+# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
 # List of effect libraries to load. Each library element must contain a "path" element
 # giving the full path of the library .so file.
 #    libraries {
@@ -234,15 +261,36 @@ effects {
   }
 }
 
-pre_processing {
-    voice_communication {
-        aec {
-        }
-        ns {
-        }
-    }
-}
-
+# Audio global processor configurations.
+# The global processor configuration consists in a list of effects elements.
+# The name of the effect element must be the name of one of the effects in
+# the "effects" list of the file.
+# Each effect element may optionally contain a list of parameters and their
+# default value to apply when the pre processor effect is created.
+# A parameter is defined by a "param" element and a "value" element. Each of these elements
+# consists in one or more elements specifying a type followed by a value.
+# The types defined are: "int", "short", "float", "bool" and "string"
+# When both "param" and "value" are a single int, a simple form is allowed where just
+# the param and value pair is present in the parameter description
+#    global_processing {
+#        <fx name> {
+#            <param 1 name> {
+#                param {
+#                    int|short|float|bool|string <value>
+#                    [ int|short|float|bool|string <value> ]
+#                    ...
+#                }
+#                value {
+#                    int|short|float|bool|string <value>
+#                    [ int|short|float|bool|string <value> ]
+#                    ...
+#                }
+#            }
+#            <param 2 name > {<param> <value>}
+#            ...
+#        }
+#        ...
+#    }
 global_processing {
   dirac {
     bl@lakala {
@@ -270,6 +318,15 @@ global_processing {
       }
     }
   }
+ }
+
+pre_processing {
+    voice_communication {
+        aec {
+        }
+        ns {
+        }
+    }
 }
 
 # Default pre-processing effects. Add to audio_effect.conf "effects" section if
