--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -90,6 +90,9 @@ on boot
     write /dev/cpuset/top-app/cpus 0-5
     write /dev/cpuset/top-app/boost/cpus 4-5
 
+    # adaptive LMK
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
 
     chown system system /dev/cpuset/top-app/boost
     chown system system /dev/cpuset/top-app/boost/tasks
