--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -138,10 +138,10 @@ service qseecomd /system/bin/qseecomd
 #   group system
 #   socket seempdw dgram 0666 system system
 
-service perfd /system/vendor/bin/perfd
-   class main
-   user root
-   disabled
+#service perfd /system/vendor/bin/perfd
+#   class main
+#   user root
+#   disabled
 
 #service mpdecision /system/bin/mpdecision --avg_comp
 #   user root
