init.target.rc: add initial performance profile configuration
Change-Id: Ic42c596a9c99a17db61fb23e2c2d0a07f73d483b

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -249,3 +249,21 @@ service readmac /system/bin/readmac
     group radio qcom_diag log net_raw wifi
     oneshot
     disabled
+
+on property:sys.perf.profile=0
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
+	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
+	write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+
+on property:sys.perf.profile=1
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
+	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
+	write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+
+on property:sys.perf.profile=2
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 2
+	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
+	write /sys/module/cpu_boost/parameters/input_boost_enabled 1
