--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -249,20 +249,37 @@ service readmac /system/bin/readmac
     oneshot
     disabled
 
+# power save
 on property:sys.perf.profile=0
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
-	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
-	write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
+  write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
+  write /sys/module/cpu_boost/parameters/input_boost_enabled 0
 
+# bias power save
+on property:sys.perf.profile=3
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
+  write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
+  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+
+# balanced
 on property:sys.perf.profile=1
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
-	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
-	write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
+  write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
+  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
 
+# bias high performance
+on property:sys.perf.profile=4
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 1
+  write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
+  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+
+# high performance
 on property:sys.perf.profile=2
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-	write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 2
-	write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
-	write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 2
+  write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
+  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
