--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -252,6 +252,7 @@ service readmac /system/bin/readmac
 # power save
 on property:sys.perf.profile=0
   write /sys/block/mmcblk0/queue/scheduler "noop"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "powersave"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
@@ -260,6 +261,7 @@ on property:sys.perf.profile=0
 # bias power save
 on property:sys.perf.profile=3
   write /sys/block/mmcblk0/queue/scheduler "noop"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "powersave"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
@@ -268,6 +270,7 @@ on property:sys.perf.profile=3
 # balanced
 on property:sys.perf.profile=1
   write /sys/block/mmcblk0/queue/scheduler "noop"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
@@ -276,6 +279,7 @@ on property:sys.perf.profile=1
 # bias high performance
 on property:sys.perf.profile=4
   write /sys/block/mmcblk0/queue/scheduler "cfq"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 1
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
@@ -284,6 +288,7 @@ on property:sys.perf.profile=4
 # high performance
 on property:sys.perf.profile=2
   write /sys/block/mmcblk0/queue/scheduler "cfq"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 2
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
