--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -253,7 +253,7 @@ service readmac /system/bin/readmac
 on property:sys.perf.profile=0
   write /sys/block/mmcblk0/queue/scheduler "noop"
   write /sys/class/kgsl/kgsl-3d0/devfreq/governor "powersave"
-  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+  write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
   write /sys/module/cpu_boost/parameters/input_boost_enabled 0
