--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -254,7 +254,7 @@ on property:sys.perf.profile=0
 # bias power save
 on property:sys.perf.profile=3
   write /sys/block/mmcblk0/queue/scheduler "noop"
-  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "powersave"
+  write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
