--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -247,9 +247,9 @@ on property:sys.perf.profile=0
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
-  write /sys/module/cpu_boost/parameters/input_boost_enabled 0
-  write /sys/module/cpu_boost/parameters/input_boost_freq "0:0 1:0 2:0 3:0 4:0 5:0"
-  write /sys/module/cpu_boost/parameters/input_boost_ms 0
+  write /sys/kernel/cpu_input_boost/ib_freqs "384000 384000"
+  write /sys/kernel/cpu_input_boost/ib_duration_ms 0
+  write /sys/kernel/cpu_input_boost/enabled 0
 
 # bias power save
 on property:sys.perf.profile=3
@@ -258,9 +258,9 @@ on property:sys.perf.profile=3
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 0
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
-  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-  write /sys/module/cpu_boost/parameters/input_boost_freq "0:600000 1:600000 2:600000 3:600000 4:0 5:0"
-  write /sys/module/cpu_boost/parameters/input_boost_ms 40
+  write /sys/kernel/cpu_input_boost/ib_freqs "787200 768000"
+  write /sys/kernel/cpu_input_boost/ib_duration_ms 1000
+  write /sys/kernel/cpu_input_boost/enabled 1
 
 # balanced
 on property:sys.perf.profile=1
@@ -269,9 +269,9 @@ on property:sys.perf.profile=1
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 0
-  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-  write /sys/module/cpu_boost/parameters/input_boost_freq "0:787200 1:787200 2:787200 3:787200 4:0 5:0"
-  write /sys/module/cpu_boost/parameters/input_boost_ms 100
+  write /sys/kernel/cpu_input_boost/ib_freqs "864000 864000"
+  write /sys/kernel/cpu_input_boost/ib_duration_ms 1000
+  write /sys/kernel/cpu_input_boost/enabled 1
 
 # bias high performance
 on property:sys.perf.profile=4
@@ -280,9 +280,9 @@ on property:sys.perf.profile=4
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 1
-  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-  write /sys/module/cpu_boost/parameters/input_boost_freq "0:960000 1:960000 2:960000 3:960000 4:0 5:0"
-  write /sys/module/cpu_boost/parameters/input_boost_ms 100
+  write /sys/kernel/cpu_input_boost/ib_freqs "960000 960000"
+  write /sys/kernel/cpu_input_boost/ib_duration_ms 1000
+  write /sys/kernel/cpu_input_boost/enabled 1
 
 # high performance
 on property:sys.perf.profile=2
@@ -291,6 +291,6 @@ on property:sys.perf.profile=2
   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
   write /sys/devices/system/cpu/cpu4/core_ctl/max_cpus 2
   write /sys/devices/system/cpu/cpu4/core_ctl/min_cpus 2
-  write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-  write /sys/module/cpu_boost/parameters/input_boost_freq "0:1248000 1:1248000 2:1248000 3:1248000 4:0 5:0"
-  write /sys/module/cpu_boost/parameters/input_boost_ms 100
+  write /sys/kernel/cpu_input_boost/ib_freqs "1248000 1248000"
+  write /sys/kernel/cpu_input_boost/ib_duration_ms 1000
+  write /sys/kernel/cpu_input_boost/enabled 1
