init: remove unused services
Change-Id: Icd76785df7406b5284b52fc2b8046a3fabb19957

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -422,7 +422,7 @@ service ftmd /system/bin/logwrapper /system/bin/ftmdaemon
     disabled
     oneshot
 
-service port-bridge /system/bin/port-bridge /dev/mhi_pipe_32 /dev/ttyGS0
+service port-bridge /vendor/bin/port-bridge /dev/mhi_pipe_32 /dev/ttyGS0
     class main
     user radio system
     group radio system inet
